config-test/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-hello-world
  namespace: razeedeploy
  labels:
    app: python-hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-hello-world
  template:
    metadata:
      labels:
        app: python-hello-world
    spec:
      containers:
        - name: python-hello-world
          image: docker.io/diegorom27/python-hello-world:latest
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
