config-test/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-hello-world
  namespace: test
  labels:
    app: python-hello-world
spec:
  selector:
    app: python-hello-world
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
