config-test/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: python-hello-world
  namespace: razeedeploy
  labels:
    app: python-hello-world
spec:
  to:
    kind: Service
    name: python-hello-world
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
